// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page Template default render with one children matches snapshot 1`] = `
"<div class=\\"page-template\\">
  <div class=\\"ant-page-header page-template-header ant-page-header-ghost\\"></div>
  <div class=\\"page-template__container\\">
    <div></div>
  </div>
</div>"
`;

exports[`Page Template passing in multiple children matches snapshot 1`] = `
"<div class=\\"page-template\\">
  <div class=\\"ant-page-header page-template-header ant-page-header-ghost\\"></div>
  <div class=\\"page-template__container\\">
    <div></div><span></span>
  </div>
</div>"
`;
